// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model AuthUserEntity {
  id       Int    @id @default(autoincrement())
  email    String
  password String
  userId   Int

  @@map("auth_user")
}

model UserEntity {
  id   Int    @id @default(autoincrement())
  name String

  @@map("user")
}
