@startuml

package Auth {
    class AuthUser {
        - id: AuthUserId
        - email: Email
        - password: Password
    }
}

package User {
    class User {
        - id: UserId
        - name: UserName
    }


    AuthUser "1" - "1" User
}

package Group {
    class Group {
        - id: GroupId
        - name: GroupName
        - categoryId: GroupCategory
    }

    class GroupMember {
        - id: GroupMemberId
        - userId: UserId
        - joinDate: Date
        - status: GroupMemberStatus
    }

    User "1" -- "1" GroupMember
    GroupMember "*" -- "1" Group
}

@enduml